fix: post hiding behinde header

--- a/components/styles/post.module.css
+++ b/components/styles/post.module.css
@@ -205,7 +205,6 @@
 
 .filesContainer {
     position: relative;
-    border-top: var(--border);
     border-bottom: var(--border);
 }
 
@@ -375,13 +374,14 @@
     min-height: 50px;
     display: block;
     position: sticky;
-    bottom: 0;
+    bottom: -1px;
 }
 
 @media only screen and (max-width: 750px) {
     .viewContent {
+        margin-top: 20px;
         display: block;
-        width: 100vw;
+        width: 100%;
     }
 
     .viewFiles {
